data filling in!

--- a/templates/views/meals.pug
+++ b/templates/views/meals.pug
@@ -6,8 +6,23 @@ block content
 		ul
 			each meal in meals
 				li
-					p #{meal.title}
-					p #{meal.datetime}
-					p #{meal.user}
-					p !{JSON.stringify(meal)}
-
+					h2 #{meal.title}
+					p <strong>Date:</strong> #{meal.datetime}
+					p <strong>Carbs:</strong> #{meal.carbs}
+					p <strong>User:</strong> #{meal.user.name.first} #{meal.user.name.last}
+					p <strong>Injections:</strong>
+						ul
+							each injection in meal.injections
+								li #{injection.units}, #{injection.datetime}
+					p <strong>Exercises:</strong>
+						ul
+							each exercise in meal.exercises
+								li #{exercise.title}, #{exercise.duration}, #{exercise.start}
+					p <strong>Snacks:</strong>
+						ul
+							each snack in meal.snacks
+								li #{snack.title}, #{snack.carbs} <!-- !{JSON.stringify(snack)} -->
+					p <strong>Measurements:</strong>
+						ul
+							each measure in meal.measurements
+								li #{measure.readingUS}, #{measure.datetime}
